--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,8 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
     color-scheme: dark;
-    list-style-type: disc;
+
+
 }
 
 .markdown h1 {
@@ -31,13 +32,30 @@
 }
 
 .markdown ul {
+    list-style-type: disc;
+    margin-left: 1rem;
+    padding: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    
+}
+
+.markdown ul ul {
+    margin-left: 1rem;
+    padding: 1rem;
+    padding-top: 0.0rem;
+    padding-bottom: 0.0rem;
+}
+
+.markdown ol {
+    list-style-type: decimal;
     margin-left: 1rem;
     padding: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 
-.markdown ul ul {
+.markdown ol ul {
     margin-left: 1rem;
     padding: 1rem;
     padding-top: 0.0rem;
